SERVER-20992: Fix type error in configuration argument